--- a/assets/css/add-main.css
+++ b/assets/css/add-main.css
@@ -2,10 +2,19 @@
   border: none !important;
 }
 
-a{
-  color:inherit;
+a {
+  color: inherit;
   text-decoration: none;
 
+}
+
+#resume a {
+  color: -webkit-link;
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-line: underline;
+  text-decoration-style: initial;
+  text-decoration-color: initial;
 }
 
 .links a {
@@ -21,7 +30,8 @@ a{
   text-align: center;
   margin-left: 1.5em;
 }
-.success:hover{
+
+.success:hover {
   background: #00000000;
 
 }
